# klean-OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
